exports[`AppContents can redirect to root if needed 1`] = `
<div
  dataMockType="Redirect"
  to="/">
  Redirect
</div>
------------HTML PREVIEW---------------
  <div
    dataMockType="Redirect"
    to="/">
    Redirect
  </div>
`;

exports[`AppContents renders a folder with subfolders and suites correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "minHeight": "100vh",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    dataMockType="Sidebar"
    linkBack="/folder/-/path/to"
    subtitle="-/path/to/snapshots"
    title={
      <span>
        <function Icon() {
            _classCallCheck(this, Icon);
        
            return _possibleConstructorReturn(this, Object.getPrototypeOf(Icon).apply(this, arguments));
          }
          icon="folder-open-o"
          style={
            Object {
              "cursor": "default",
            }
          } />
         
        snapshots
      </span>
    }>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="folder-o"
      id="folder_-/path/to/folder/super/nested/folder"
      label="super/nested/folder"
      link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsuper%2Fnested%2Ffolder">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="folder-o"
      id="folder_-/path/to/folder/subdir"
      label="subdir"
      link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsubdir">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="file-o"
      id="suite_-/path/to/folder/suite1.snap"
      label="suite1.​snap"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.snap">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="file-o"
      id="suite_-/path/to/folder/suite2.snap"
      label="suite2.​snap"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite2.snap">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="file-o"
      id="suite_-/path/to/folder/suite3.snap"
      label="suite3.​snap"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite3.snap">
      SidebarItem
    </div>
  </div>
  <div
    dataMockType="Preview"
    snapshot={undefined}>
    Preview
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    style="display:flex;flex-direction:row;min-height:100vh;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      dataMockType="Sidebar"
      linkBack="/folder/-/path/to"
      subtitle="-/path/to/snapshots">
      <div
        dataMockType="SidebarItem"
        icon="folder-o"
        id="folder_-/path/to/folder/super/nested/folder"
        label="super/nested/folder"
        link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsuper%2Fnested%2Ffolder">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="folder-o"
        id="folder_-/path/to/folder/subdir"
        label="subdir"
        link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsubdir">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="file-o"
        id="suite_-/path/to/folder/suite1.snap"
        label="suite1.​snap"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.snap">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="file-o"
        id="suite_-/path/to/folder/suite2.snap"
        label="suite2.​snap"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite2.snap">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="file-o"
        id="suite_-/path/to/folder/suite3.snap"
        label="suite3.​snap"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite3.snap">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="Preview">
      Preview
    </div>
  </div>
`;

exports[`AppContents renders a folder with subfolders correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "minHeight": "100vh",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    dataMockType="Sidebar"
    linkBack="/folder/-/path/to"
    subtitle="-/path/to/snapshots"
    title={
      <span>
        <function Icon() {
            _classCallCheck(this, Icon);
        
            return _possibleConstructorReturn(this, Object.getPrototypeOf(Icon).apply(this, arguments));
          }
          icon="folder-open-o"
          style={
            Object {
              "cursor": "default",
            }
          } />
         
        snapshots
      </span>
    }>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="folder-o"
      id="folder_-/path/to/folder/super/nested/folder"
      label="super/nested/folder"
      link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsuper%2Fnested%2Ffolder">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="folder-o"
      id="folder_-/path/to/folder/subdir"
      label="subdir"
      link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsubdir">
      SidebarItem
    </div>
  </div>
  <div
    dataMockType="Preview"
    snapshot={undefined}>
    Preview
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    style="display:flex;flex-direction:row;min-height:100vh;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      dataMockType="Sidebar"
      linkBack="/folder/-/path/to"
      subtitle="-/path/to/snapshots">
      <div
        dataMockType="SidebarItem"
        icon="folder-o"
        id="folder_-/path/to/folder/super/nested/folder"
        label="super/nested/folder"
        link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsuper%2Fnested%2Ffolder">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="folder-o"
        id="folder_-/path/to/folder/subdir"
        label="subdir"
        link="/folder/-%2Fpath%2Fto%2Ffolder%2Fsubdir">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="Preview">
      Preview
    </div>
  </div>
`;

exports[`AppContents renders a folder with suites correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "minHeight": "100vh",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    dataMockType="Sidebar"
    linkBack="/folder/-/path/to"
    subtitle="-/path/to/snapshots"
    title={
      <span>
        <function Icon() {
            _classCallCheck(this, Icon);
        
            return _possibleConstructorReturn(this, Object.getPrototypeOf(Icon).apply(this, arguments));
          }
          icon="folder-open-o"
          style={
            Object {
              "cursor": "default",
            }
          } />
         
        snapshots
      </span>
    }>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="file-o"
      id="suite_-/path/to/folder/suite1.snap"
      label="suite1.​snap"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.snap">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="file-o"
      id="suite_-/path/to/folder/suite2.snap"
      label="suite2.​snap"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite2.snap">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="file-o"
      id="suite_-/path/to/folder/suite3.snap"
      label="suite3.​snap"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite3.snap">
      SidebarItem
    </div>
  </div>
  <div
    dataMockType="Preview"
    snapshot={undefined}>
    Preview
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    style="display:flex;flex-direction:row;min-height:100vh;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      dataMockType="Sidebar"
      linkBack="/folder/-/path/to"
      subtitle="-/path/to/snapshots">
      <div
        dataMockType="SidebarItem"
        icon="file-o"
        id="suite_-/path/to/folder/suite1.snap"
        label="suite1.​snap"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.snap">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="file-o"
        id="suite_-/path/to/folder/suite2.snap"
        label="suite2.​snap"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite2.snap">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="file-o"
        id="suite_-/path/to/folder/suite3.snap"
        label="suite3.​snap"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite3.snap">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="Preview">
      Preview
    </div>
  </div>
`;

exports[`AppContents renders a spinner while loading 1`] = `
<div
  dataMockType="LargeMessage">
  <i
    className="giu-icon fa fa-circle-o-notch fa-spin"
    style={
      Object {
        "color": undefined,
        "cursor": "pointer",
        "letterSpacing": "normal",
      }
    } />
   Loading…
</div>
------------HTML PREVIEW---------------
  <div
    dataMockType="LargeMessage">
    <i
      class="giu-icon fa fa-circle-o-notch fa-spin"
      style="cursor:pointer;letter-spacing:normal;">
    </i>
     Loading…
  </div>
`;

exports[`AppContents renders a suite with a selected snapshot 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "minHeight": "100vh",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    dataMockType="Sidebar"
    linkBack="/folder/-/path/to/folder"
    subtitle="-/path/to/folder/suite1.js.snap"
    title={
      <span>
        <function Icon() {
            _classCallCheck(this, Icon);
        
            return _possibleConstructorReturn(this, Object.getPrototypeOf(Icon).apply(this, arguments));
          }
          icon="file-o"
          style={
            Object {
              "cursor": "default",
            }
          } />
         
        suite1
      </span>
    }>
    <div
      dataMockType="SidebarGroup"
      name="groupname">
      <div
        dataMockType="SidebarItem"
        fSelected={false}
        icon="camera"
        id="groupname 1"
        label="1"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%201">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        fSelected={false}
        icon="camera"
        id="groupname 2"
        label="2"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%202">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={true}
      icon="camera"
      id="individual1 1"
      label="individual1"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual1%201">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="camera"
      id="individual2 1"
      label="individual2"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual2%201">
      SidebarItem
    </div>
  </div>
  <div
    dataMockType="Preview"
    snapshot={
      Object {
        "css": Array [],
        "id": "individual1 1",
        "snap": "contents3",
      }
    }>
    Preview
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    style="display:flex;flex-direction:row;min-height:100vh;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      dataMockType="Sidebar"
      linkBack="/folder/-/path/to/folder"
      subtitle="-/path/to/folder/suite1.js.snap">
      <div
        dataMockType="SidebarGroup"
        name="groupname">
        <div
          dataMockType="SidebarItem"
          icon="camera"
          id="groupname 1"
          label="1"
          link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%201">
          SidebarItem
        </div>
        <div
          dataMockType="SidebarItem"
          icon="camera"
          id="groupname 2"
          label="2"
          link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%202">
          SidebarItem
        </div>
      </div>
      <div
        dataMockType="SidebarItem"
        fSelected
        icon="camera"
        id="individual1 1"
        label="individual1"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual1%201">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="camera"
        id="individual2 1"
        label="individual2"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual2%201">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="Preview">
      Preview
    </div>
  </div>
`;

exports[`AppContents renders a suite with grouped snapshots correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "minHeight": "100vh",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    dataMockType="Sidebar"
    linkBack="/folder/-/path/to/folder"
    subtitle="-/path/to/folder/suite1.js.snap"
    title={
      <span>
        <function Icon() {
            _classCallCheck(this, Icon);
        
            return _possibleConstructorReturn(this, Object.getPrototypeOf(Icon).apply(this, arguments));
          }
          icon="file-o"
          style={
            Object {
              "cursor": "default",
            }
          } />
         
        suite1
      </span>
    }>
    <div
      dataMockType="SidebarGroup"
      name="groupname">
      <div
        dataMockType="SidebarItem"
        fSelected={undefined}
        icon="camera"
        id="groupname 1"
        label="1"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%201">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        fSelected={undefined}
        icon="camera"
        id="groupname 2"
        label="2"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%202">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={undefined}
      icon="camera"
      id="individual1 1"
      label="individual1"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual1%201">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={undefined}
      icon="camera"
      id="individual2 1"
      label="individual2"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual2%201">
      SidebarItem
    </div>
  </div>
  <div
    dataMockType="Preview"
    snapshot={undefined}>
    Preview
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    style="display:flex;flex-direction:row;min-height:100vh;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      dataMockType="Sidebar"
      linkBack="/folder/-/path/to/folder"
      subtitle="-/path/to/folder/suite1.js.snap">
      <div
        dataMockType="SidebarGroup"
        name="groupname">
        <div
          dataMockType="SidebarItem"
          icon="camera"
          id="groupname 1"
          label="1"
          link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%201">
          SidebarItem
        </div>
        <div
          dataMockType="SidebarItem"
          icon="camera"
          id="groupname 2"
          label="2"
          link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=groupname%202">
          SidebarItem
        </div>
      </div>
      <div
        dataMockType="SidebarItem"
        icon="camera"
        id="individual1 1"
        label="individual1"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual1%201">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="camera"
        id="individual2 1"
        label="individual2"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual2%201">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="Preview">
      Preview
    </div>
  </div>
`;

exports[`AppContents renders a suite with individual snapshots correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "minHeight": "100vh",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    dataMockType="Sidebar"
    linkBack="/folder/-/path/to/folder"
    subtitle="-/path/to/folder/suite1.js.snap"
    title={
      <span>
        <function Icon() {
            _classCallCheck(this, Icon);
        
            return _possibleConstructorReturn(this, Object.getPrototypeOf(Icon).apply(this, arguments));
          }
          icon="file-o"
          style={
            Object {
              "cursor": "default",
            }
          } />
         
        suite1
      </span>
    }>
    <div
      dataMockType="SidebarItem"
      fSelected={undefined}
      icon="camera"
      id="individual1 1"
      label="individual1"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual1%201">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={undefined}
      icon="camera"
      id="individual2 1"
      label="individual2"
      link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual2%201">
      SidebarItem
    </div>
  </div>
  <div
    dataMockType="Preview"
    snapshot={undefined}>
    Preview
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    style="display:flex;flex-direction:row;min-height:100vh;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      dataMockType="Sidebar"
      linkBack="/folder/-/path/to/folder"
      subtitle="-/path/to/folder/suite1.js.snap">
      <div
        dataMockType="SidebarItem"
        icon="camera"
        id="individual1 1"
        label="individual1"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual1%201">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="camera"
        id="individual2 1"
        label="individual2"
        link="/suite/-%2Fpath%2Fto%2Ffolder%2Fsuite1.js.snap?id=individual2%201">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="Preview">
      Preview
    </div>
  </div>
`;

exports[`AppContents renders error messages 1`] = `
<div
  dataMockType="LargeMessage">
  <i
    className="giu-icon fa fa-warning"
    onClick={undefined}
    style={
      Object {
        "color": "#999999",
        "cursor": undefined,
        "letterSpacing": "normal",
      }
    } />
   
  <b>
    An error occurred:
  </b>
  <br />
  Something horrible!
  <br />
  <span
    className="giu-button"
    onClick={undefined}
    style={
      Object {
        "WebkitUserSelect": "none",
        "border": "1px solid #999999",
        "borderRadius": 5,
        "cursor": "pointer",
        "display": "inline-block",
        "padding": "1px 5px",
        "userSelect": "none",
      }
    }>
    <i
      className="giu-icon fa fa-home"
      onClick={undefined}
      style={
        Object {
          "color": "#999999",
          "cursor": undefined,
          "letterSpacing": "normal",
        }
      } />
     
    Home
  </span>
</div>
------------HTML PREVIEW---------------
  <div
    dataMockType="LargeMessage">
    <i
      class="giu-icon fa fa-warning"
      style="color:#999999;letter-spacing:normal;">
    </i>
     
    <b>
      An error occurred:
    </b>
    <br>
    </br>
    Something horrible!
    <br>
    </br>
    <span
      class="giu-button"
      style="-webkit-user-select:none;border:1px solid #999999;border-radius:5px;cursor:pointer;display:inline-block;padding:1px 5px;user-select:none;">
      <i
        class="giu-icon fa fa-home"
        style="color:#999999;letter-spacing:normal;">
      </i>
       
      Home
    </span>
  </div>
`;

exports[`AppContents renders the root folder correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "minHeight": "100vh",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    dataMockType="Sidebar"
    linkBack={null}
    subtitle="-"
    title={
      <span>
        <function Icon() {
            _classCallCheck(this, Icon);
        
            return _possibleConstructorReturn(this, Object.getPrototypeOf(Icon).apply(this, arguments));
          }
          icon="home"
          style={
            Object {
              "cursor": "default",
            }
          } />
         Root
      </span>
    }>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="folder-o"
      id="folder_-/path/to/folder"
      label="path/to/folder"
      link="/folder/-%2Fpath%2Fto%2Ffolder">
      SidebarItem
    </div>
    <div
      dataMockType="SidebarItem"
      fSelected={false}
      icon="folder-o"
      id="folder_-/path/to/folder2"
      label="path/to/folder2"
      link="/folder/-%2Fpath%2Fto%2Ffolder2">
      SidebarItem
    </div>
  </div>
  <div
    dataMockType="Preview"
    snapshot={undefined}>
    Preview
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    style="display:flex;flex-direction:row;min-height:100vh;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      dataMockType="Sidebar"
      subtitle="-">
      <div
        dataMockType="SidebarItem"
        icon="folder-o"
        id="folder_-/path/to/folder"
        label="path/to/folder"
        link="/folder/-%2Fpath%2Fto%2Ffolder">
        SidebarItem
      </div>
      <div
        dataMockType="SidebarItem"
        icon="folder-o"
        id="folder_-/path/to/folder2"
        label="path/to/folder2"
        link="/folder/-%2Fpath%2Fto%2Ffolder2">
        SidebarItem
      </div>
    </div>
    <div
      dataMockType="Preview">
      Preview
    </div>
  </div>
`;
